add additional info modifications converter to damsel model + expand contact info